<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appBackground"
    tools:context=".presentation.login.view.AdminLoginActivity">

    <RelativeLayout
        android:id="@+id/toolbar_container"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <include
            android:id="@+id/view_toolbar"
            layout="@layout/common_toolbar" />

    </RelativeLayout>

    <View
        android:id="@+id/divider_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/toolbarViewLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_container" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/appIcon"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="@dimen/_150sdp"
        android:scaleType="fitXY"
        android:layout_marginTop="@dimen/_50sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider_line"
        app:srcCompat="@drawable/app_icon" />

    <com.rabadiya.base.customviews.customtextview.CommonEditText
        android:id="@+id/etUsername"
        style="@style/EdittextTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:hint="@string/enter_user_name"
        android:maxLines="1"
        android:layout_marginTop="@dimen/_50sdp"
        android:paddingHorizontal="@dimen/_6sdp"
        android:paddingVertical="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appIcon" />

    <com.rabadiya.base.customviews.customtextview.CommonEditText
        android:id="@+id/etPassword"
        style="@style/EdittextTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:hint="@string/enter_password"
        android:maxLines="1"
        android:inputType="textPassword"
        android:layout_marginTop="@dimen/_20sdp"
        android:paddingHorizontal="@dimen/_6sdp"
        android:paddingVertical="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etUsername" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogin"
        style="@style/ButtonPrimaryTheme"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginHorizontal="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_40sdp"
        android:text="@string/login"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etPassword"/>

</androidx.constraintlayout.widget.ConstraintLayout>